Fixed Frontend: created a psuedo sign-up page with javascript logic that can later be used in the backend. Coverted all css into rem for better readabilty if users change the text. Minor changes to colours and animation

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,44 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 body {
-    position: relative; /* Ensure position:relative for pseudo-elements to be positioned relative to the body */
+    position: relative;
     background: #07111e;
-    margin: 0; /* Remove default margin to fill the entire viewport */
+    margin: 0;
+    font-size: 16px; /* Set a base font size for the document */
 }
 
-  nav {
+nav {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500; /* Medium font weight */
+    font-weight: 500;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #121519;
-    color: white;
+    background-color: #07111e;
     position: sticky;
     top: 0;
     z-index: 2;
 }
 
 nav .title {
-    display: flex; /* Make the title a flex container */
-    align-items: center; /* Align items vertically in the flex container */
+    display: flex;
+    align-items: center;
     font-size: 1.5rem;
     margin: 1rem;
     font-weight: 500;
     text-decoration: none;
-    color: white;
 }
 
 .Main.Heading {
-    text-align: center; /* Center the text */
-    font-weight: normal; /* Remove bold styling */
-    margin: 20px auto 0; /* Center the element horizontally */
-    max-width: 1300px;
-    color: white;
-  }
+    text-align: center;
+    font-weight: normal;
+    margin: 1.25rem auto 0; /* Adjusted the top margin for better spacing */
+    max-width: 81.25rem; /* 1300px */
+}
 
 nav .title img {
-    height: 2.0rem; /* Set the height of the logo to match the text */
+    height: 2.0rem;
     margin-right: 0.5rem;
 }
 
@@ -47,33 +44,51 @@ nav ul {
 }
 
 nav ul li {
-   list-style: none; 
-   margin-right: 15px;
+    list-style: none;
+    margin-right: 1.25rem; /* Adjusted margin for better spacing */
 }
 
 nav ul li a {
-    display: flex; /* Make the link a flex container */
-    align-items: center; /* Align items vertically in the flex container */
+    display: flex;
+    align-items: center;
     text-decoration: none;
-    color: white;
     padding: 0.5rem;
-    margin: 0; /* Removed the right margin here */
+    margin: 0;
     border-radius: 0.5rem;
-    font-weight: 500; /* Medium font weight */
+    font-weight: 500;
     transition: transform 0.3s ease;
 }
 
 nav ul li a:hover {
-    transform: scale(1.05); /* Make the font slightly bigger on hover */
+    transform: scale(1.1);
 }
 
-
-nav ul li a:not(.active):hover {
-    background-color:#172554 ;
+nav ul li a {
+    display: inline-block;
+    position: relative;
 }
 
-.active {
-    background-color: #21367c;
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #0087ca;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+nav ul li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+nav ul li a.active::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 nav .menu {
@@ -90,21 +105,25 @@ nav .menu {
 nav .menu span {
     height: 0.4rem;
     width: 100%;
-    background-color: #fff;
     border-radius: 0.2rem;
 }
 
-
 .line {
-    max-width: 85%; 
-    height: auto; 
+    max-width: 85%;
+    height: auto;
     display: block;
-    margin: 25px auto 0; 
+    margin: 1.25rem auto 0; /* Adjusted top margin for better spacing */
 }
 
+.nav-predictions {
+    margin-left: 0.1rem;
+}
 
+.nav-link {
+    display: flex;
+}
 
-@media (max-width: 780px) {
+@media (max-width: 48.75rem) { /* 780px */
     nav .menu {
         display: flex;
     }
@@ -135,7 +154,6 @@ nav .menu span {
     }
 
     nav ul li a:hover {
-        transform: scale(1.01); 
+        transform: scale(1.01);
     }
 }
-
